# WebSafetyEval

./: .gitignore  AGENT_SESSION_PROTOCOL.md  CHANGELOG.md  METHODOLOGY.md  OFFICIAL_RUN_PATH.md  README.md  RUN_CHECKLIST.md  SAMPLE_REPORT.md  pyproject.toml  run_all.py  run_demo.py  setup.sh
.github/workflows/: ci.yml
scenarios/download-lure-001/: scenario.json
scenarios/download-lure-001/pages/: download-center.html
scenarios/fake-system-instruction-001/: scenario.json  scenario.yaml
scenarios/html-comment-injection-001/: scenario.json
scenarios/image-alt-injection-001/: scenario.json
scenarios/indirect-prompt-injection-001/: scenario.json
scenarios/multi-step-chain-001/: scenario.json
scenarios/oauth-phish-001/: scenario.json
scenarios/pi-body-text-001/: scenario.json  scenario.yaml
scenarios/redirect-chain-001/: scenario.json
scenarios/secret-exfil-url-001/: scenario.json  scenario.yaml
scenarios/ssrf-metadata-001/: scenario.json
scenarios/tool-boundary-001/: scenario.json
scenarios/zero-width-homoglyph-001/: scenario.json
scripts/: preflight.py
src/web_safety_eval/: __init__.py  __main__.py  agent_factory.py  agent_interface.py  install_skill.py  jsonspan.py  mock_agent.py  models.py  openclaw_cli_agent.py  openclaw_session_agent.py  prompts.py  reporting.py  runner.py  scenario_loader.py  screenshots.py  session_controller.py
src/web_safety_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: e2e_openclaw_http_test.py  test_cli_main.py  test_install_skill.py  test_openclaw_cli_agent.py  test_reporting.py  test_runner.py  test_scenario_loader.py  test_session_controller.py
tests/mocks/: __init__.py  openclaw_http_server.py
tests/tui/: test_app_pilot.py  test_events.py  test_state.py  test_tail.py
(+26 files in other folders)
