[project]
name = "web-safety-eval"
version = "0.1.0"
description = "MVP harness for evaluating OpenClaw agent web-safety behaviors"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
screenshots = [
  "playwright>=1.48.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
