[project]
name = "web-safety-eval"
version = "0.1.0"
description = "MVP harness for evaluating OpenClaw agent web-safety behaviors"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Nathan Sawyer" },
]
keywords = ["openclaw", "agent-evals", "web-safety", "prompt-injection", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]
tui = [
  "textual>=0.80",
]
screenshots = [
  "playwright>=1.48.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
web_safety_eval = ["skills/web-safety-eval/SKILL.md"]

[project.scripts]
web-safety-eval = "web_safety_eval.__main__:main"

[project.urls]
Homepage = "https://github.com/NathanSawyer1/WebSafetyEval"
Repository = "https://github.com/NathanSawyer1/WebSafetyEval"
Issues = "https://github.com/NathanSawyer1/WebSafetyEval/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
